<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.SettingsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="384dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins"
        android:text="@string/settings"
        android:textColor="@color/huddleBlue"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:paddingStart="10dp"
        android:hint="@string/name_hint"
        android:background="@drawable/input_box_vector"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <EditText
        android:id="@+id/editSurname"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:paddingStart="10dp"
        android:hint="@string/surname_hint"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_box_vector"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editProfilePicture"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:paddingStart="10dp"
        android:hint="@string/profile_picture_hint"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_box_vector"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/editSurname" />

    <Switch
        android:id="@+id/practiceAlertsSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/practice_alerts"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePicture" />

    <Switch
        android:id="@+id/matchAlertsSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/match_alerts"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/practiceAlertsSwitch" />

    <Switch
        android:id="@+id/chatNotificationsSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chat_notifications"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/matchAlertsSwitch" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="#007BFF"
        android:textColor="@color/huddleWhite"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:backgroundTint="#007BFF"
        android:textColor="@color/huddleWhite"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

</androidx.constraintlayout.widget.ConstraintLayout>