<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Ui.FragmentEventPage">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/event_page_title"
        android:layout_width="384dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/event_page_title"
        android:textColor="@color/huddleBlue"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/create_new_event_button"
        android:backgroundTint="#007BFF"
        android:textColor="@color/huddleWhite"
        app:layout_constraintTop_toBottomOf="@id/event_page_title"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

    <TextView
        android:id="@+id/match_events_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/match_events_title"
        android:textSize="20sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/createEventButton"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/matchRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/match_events_title"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintBottom_toTopOf="@id/guidelineMiddle" />

    <TextView
        android:id="@+id/practice_events_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/practice_events_title"
        android:textSize="20sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/matchRecyclerView"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/practiceRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/practice_events_title"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom" />

</androidx.constraintlayout.widget.ConstraintLayout>